--- a/Naucratis/blanco.html
+++ b/Naucratis/blanco.html
@@ -75,7 +75,7 @@
 
         <!--Funcionalidad estadisticas-->
         <li class="nav-item">
-            <a class="nav-link" href="blanco.html">
+            <a class="nav-link" href="estadisticas.html">
                 <i class="fas fa-chart-bar"></i>
                 <span>Estadísticas</span></a>
         </li>
@@ -334,6 +334,26 @@
 </div>
 <!--Fin tarjeta de cierre de sesión-->
 
+<!--Tarjeta de negacion de entrada-->
+<div class="modal fade" id="NoPermitido" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Lo sentimos</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">solo los administradores tienen permitido ingresar a esta funcionalidad</div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--Fin tarjeta de negacion de entrada-->
+    
 <!--Bootstrap complementado con JavaScript-->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
