--- a/Naucratis/inventario.html
+++ b/Naucratis/inventario.html
@@ -68,7 +68,10 @@
                 <!--Dos enlaces con cada una de las funcionalidades del inventario-->
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="blanco.html">Añadir libro</a>
+                        <!--<a class="collapse-item" href="blanco.html">Añadir libro</a>-->
+                        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#NoPermitido">
+                            Añadir libro
+                        </a>
                         <a class="collapse-item" href="inventario.html">Editar libro</a>
                     </div>
                 </div>
