--- a/Naucratis/inventario.html
+++ b/Naucratis/inventario.html
@@ -581,7 +581,7 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!--Scripts personalizados para todas las páginas-->
-    <script src="js/naucratis.min.js"></script>
+    <script src="js/naucratis.js"></script>
 
     <!--Complementos de nivel de página-->
     <script src="vendor/datatables/jquery.dataTables.min.js"></script>
