--- a/Naucratis/pagina-principal.html
+++ b/Naucratis/pagina-principal.html
@@ -427,7 +427,7 @@
     <!--Fin tarjeta de cierre de sesión-->
 
     <!--Tarjeta de negacion de entrada-->
-    <div class="modal fade" id="NoPermitido" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="NoPermitido" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabe2"
          aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
